WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181340
TextCodec uses std::array but does not include it
https://bugs.webkit.org/show_bug.cgi?id=181340
Summary
TextCodec uses std::array but does not include it
Don Olmstead
Reported
2018-01-05 13:20:02 PST
TextCodec needs to include <array>.
Attachments
Patch
(1.01 KB, patch)
2018-01-05 13:24 PST
,
Don Olmstead
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Don Olmstead
Comment 1
2018-01-05 13:24:32 PST
Created
attachment 330575
[details]
Patch #include <array>
WebKit Commit Bot
Comment 2
2018-01-05 14:42:35 PST
Comment on
attachment 330575
[details]
Patch Clearing flags on attachment: 330575 Committed
r226463
: <
https://trac.webkit.org/changeset/226463
>
WebKit Commit Bot
Comment 3
2018-01-05 14:42:37 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-01-05 14:43:18 PST
<
rdar://problem/36327660
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug