TextCodec uses std::array but does not include it https://bugs.webkit.org/show_bug.cgi?id=181340

Reviewed by Alex Christensen.

No new tests. No change in behavior.

* platform/text/TextCodec.h:


Canonical link: https://commits.webkit.org/197179@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226463 268f45cc-cd09-0410-ab3c-d52691b4dbfc